# Assessment

complex_task/: CMakeLists.txt  main.cpp
cpp/: CMakeLists.txt  matrix.h
opencv/: CMakeLists.txt  main.cpp
ros|ros2/src/camara_operation/: CMakeLists.txt  package.xml
ros|ros2/src/camara_operation/src/: camera_node.cpp
